--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -3,10 +3,18 @@
     margin-right: 10px;
     /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
 }
-
+div.scroll {
+   
+    width: 100%;
+    height: 480px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align:justify;
+    z-index: -990px;
+}
 .container{
     width: 100%;
-    float: left;
+    float: left; 
 }
 
 .borderStyle{
